--- a/src/components/HomeArea/HomeArea.css
+++ b/src/components/HomeArea/HomeArea.css
@@ -1,7 +1,22 @@
 .home-area {
-    width: 125px;
-    height: 125px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 250px;
     padding: 5px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.home-area:hover {
+    box-shadow: 0px 0px 5px 5px #9d89cb;
+}
+
+.home-area h3 {
+    font-size: 0.8em;
+    font-weight: 200;
 }
 
 .player-name {
@@ -17,6 +32,5 @@
 }
 
 .ready-position {
-    height: 20px;
-    border-top: 1px solid red;
+    height: 30px;
 }
