--- a/src/components/Ludo/Ludo.css
+++ b/src/components/Ludo/Ludo.css
@@ -1,11 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500;1,600;1,700;1,800&display=swap');
+
+html,
+body,
+.root {
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .outer-ludo {
+    margin: 20px 0 0 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .ludo {
     display: flex;
     justify-content: center;
+    font-size: 1em;
+}
+
+.outer-ludo h1,
+.outer-ludo h2 {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.outer-ludo h1 {
+    font-weight: 100;
+    font-size: 6em;
+    margin: 0;
+    padding: 0;
+}
+
+.outer-ludo h2 {
+    font-weight: 200;
+    font-size: 2em;
+    margin: 0 0 40px 0;
+    padding: 0;
 }
 
 .ludo-col {
@@ -49,7 +84,8 @@
     width: 250px;
     padding: 5px;
     font-size: 2em;
-    background-color: #9d89cb;
+    height: 150px;
+    width: 150px;
     border-radius: 10px;
     border: 1px solid white;
     transition: all 250ms ease;
@@ -57,4 +93,103 @@
 
 .controls button:hover {
     background-color: #c3aaff;
+}
+
+.top-status {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6em;
+    border: 1px solid #717171aa;
+    padding: 5px;
+    min-width: 400px;
+    text-align: center;
+    margin: 0 0 20px 0;
+    border-radius: 10px;
+    color: #000000;
+}
+
+.status_strong {
+    font-weight: 300;
+    font-size: 1.2em;
+    margin: 0 10px 0 10px;
+    color: black;
+    text-shadow: 1px 1px #9d89cb;
+}
+
+.start-game-btn-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes example {
+    0% {
+        background-color: #ffe699aa;
+        left: -30px;
+        top: -30px;
+    }
+
+    25% {
+        background-color: #b4c7e7aa;
+        left: 30px;
+        top: -30px;
+    }
+
+    50% {
+        background-color: #f8cbadaa;
+        left: 30px;
+        top: 30px;
+    }
+
+    75% {
+        background-color: #c5e0b4aa;
+        left: -30px;
+        top: 30px;
+    }
+
+    100% {
+        background-color: #ffe699aa;
+        left: -30px;
+        top: -30px;
+    }
+}
+
+
+.start-game-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #9d89cb;
+    border-radius: 10px;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    font-size: 2em;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+.start-game-btn h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 0.7em;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+
+.start-game-btn h4 {
+    margin: 20px 0 0 0;
+    padding: 0;
+    font-size: 0.5em;
+    font-weight: 100;
+}
+
+.current-players {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
