--- a/src/components/Token/Token.css
+++ b/src/components/Token/Token.css
@@ -1,6 +1,7 @@
 .token {
-    font-size: 1.5em;
-    font-weight: 500;
-    width: 10px;
-    height: 10px;
+    font-size: 1em;
+    font-weight: 200;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
 }
