--- a/src/components/Ludo/Ludo.css
+++ b/src/components/Ludo/Ludo.css
@@ -158,6 +158,7 @@ body,
 
 
 .start-game-btn {
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,25 +168,28 @@ body,
     position: relative;
     width: 300px;
     height: 300px;
-    font-size: 2em;
     animation-name: example;
     animation-duration: 4s;
     animation-iteration-count: infinite;
 }
 
+.start-game-btn:hover {
+    box-shadow: 0px 0px 5px 5px #9d89cb;
+}
+
 .start-game-btn h3 {
     margin: 0;
     padding: 0;
-    font-size: 0.7em;
-    font-weight: 200;
+    font-size: 1.4em;
+    font-weight: 400;
     letter-spacing: 2px;
 }
 
 .start-game-btn h4 {
     margin: 20px 0 0 0;
     padding: 0;
-    font-size: 0.5em;
-    font-weight: 100;
+    font-size: 1em;
+    font-weight: 300;
 }
 
 .current-players {
