--- a/src/components/Ludo/Ludo.css
+++ b/src/components/Ludo/Ludo.css
@@ -9,7 +9,7 @@ body,
 }
 
 .outer-ludo {
-    margin: 20px 0 0 0;
+    margin: 5px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,15 +31,15 @@ body,
 
 .outer-ludo h1 {
     font-weight: 100;
-    font-size: 6em;
-    margin: 0;
+    font-size: 4em;
+    margin: 0 0 5px 0;
     padding: 0;
 }
 
 .outer-ludo h2 {
     font-weight: 200;
-    font-size: 2em;
-    margin: 0 0 40px 0;
+    font-size: 1em;
+    margin: 0 0 15px 0;
     padding: 0;
 }
 
@@ -53,23 +53,41 @@ body,
     display: flex;
     flex-wrap: wrap;
     flex-basis: 10;
-    width: 750px;
-    height: 750px;
+    width: 500px;
+    height: 500px;
 }
 
 .status {
     margin: 10px 0 10px 0;
     text-align: center;
     color: white;
-    font-size: 2em;
+    font-size: 1.5em;
     min-height: 30px;
     min-width: 700px;
     background-color: cadetblue;
 }
 
 .roll {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    top: -250px;
+    left: 115px;
+    width: 70px;
+    height: 70px;
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
+}
+
+.roll h3 {
+    padding: 0;
+    margin: 0;
+    font-size: 0.5em;
+    font-weight: 100;
 }
 
 .controls {
@@ -81,11 +99,11 @@ body,
 }
 
 .controls button {
-    width: 250px;
     padding: 5px;
-    font-size: 2em;
-    height: 150px;
-    width: 150px;
+    font-size: 1em;
+    height: 50px;
+    width: 50px;
+    text-align: center;
     border-radius: 10px;
     border: 1px solid white;
     transition: all 250ms ease;
@@ -99,22 +117,21 @@ body,
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.6em;
+    font-size: 1em;
     border: 1px solid #717171aa;
     padding: 5px;
-    min-width: 400px;
+    min-width: 250px;
     text-align: center;
-    margin: 0 0 20px 0;
+    margin: 0 0 10px 0;
     border-radius: 10px;
     color: #000000;
 }
 
 .status_strong {
-    font-weight: 300;
+    font-weight: 500;
     font-size: 1.2em;
     margin: 0 10px 0 10px;
     color: black;
-    text-shadow: 1px 1px #9d89cb;
 }
 
 .start-game-btn-container {
