--- a/src/components/Ludo/Ludo.css
+++ b/src/components/Ludo/Ludo.css
@@ -114,6 +114,7 @@ body {
     background-color: #9d89cb;
     color: white;
     font-weight: 300;
+    cursor: pointer;
 }
 
 .controls button:hover {
@@ -195,6 +196,7 @@ body {
     animation-name: example;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    cursor: pointer;
 }
 
 .start-game-btn:hover {
